同步于: 10月7日13时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -12,19 +12,19 @@
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 习近平昔日密友称其亟欲追求权力(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018243.md)
 #### [ 二十大：谁有可能跻身新一届常委(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018159.md)
+#### [ 云南大白持枪吓坏百姓 反习派发亡党警告](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659745.md)
 #### [ 中共20大逼近 中国多省无预警“封城”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018367.md)
 #### [ 这一危机远超“清零”影响？李嘉诚赶紧跑路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659883.md)
-#### [ 云南大白持枪吓坏百姓 反习派发亡党警告](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659745.md)
 #### [ 二十大来临 英媒爆中国经济陷入五大困境 李克强无能为力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659862.md)
 #### [ 李文亮死亡前的病历首曝光&nbsp;&nbsp;(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018436.md)
 #### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839313.md)
 #### [ 港媒曝二十大修改党章细节 习近平追求长期执政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659829.md)
 #### [ 二十大添变数 美国将在关键时刻推“最强禁令”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018460.md)
-#### [ 传北方民族大学收学生护照及港澳台通行证 恐出国不归(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018379.md)
 #### [ 专家：七中全会“三明一暗”习最大对手是谁](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840326.md)
+#### [ 传北方民族大学收学生护照及港澳台通行证 恐出国不归(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018379.md)
 #### [ 蓬佩奥：共产党最害怕中国人听到真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839844.md)
-#### [ 二十大后举什么旗？外界观察习近平左转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545008.md)
 #### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
+#### [ 二十大后举什么旗？外界观察习近平左转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545008.md)
 #### [ 袁红冰谈官场内幕：中国等待一次重大事变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840196.md)
 #### [ 专家：中共经济模式自挖陷阱 难阻经济放缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839667.md)
 #### [ 施压蓬佩奥的公函曝光 中共虚假宣传被戳穿](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839614.md)
@@ -39,15 +39,15 @@
 #### [ 听者胆颤心惊 毛泽东究竟留下了哪些临终遗言？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018072.md)
 #### [ 分析：世界在变 蓬佩奥新战略令中共恐慌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839564.md)
 #### [ 英媒详析中国经济陷入困境的五个原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659910.md)
+#### [ 二十大人事尘埃落定 这一群人料成大赢家](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660018.md)
 #### [ 二十大后经济左转？“人民经济”论掀风波 ](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103544738.md)
 #### [ 将选举数据存于中国服务器 美华裔CEO被捕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839611.md)
-#### [ 二十大人事尘埃落定 这一群人料成大赢家](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660018.md)
 #### [ 河北邢台防疫政策靠“嘴巴” 可以“讨价还价”(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018372.md)
 #### [ 王友群：原最高法院副院长沈德咏的欺世大谎](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839618.md)
 #### [ 二十大前中共封网升级 大量社交聊天群组被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545042.md)
+#### [ 政治敏感时刻 习“六四”后文章曝光 全面左转与此有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660132.md)
 #### [ 分析：将中共侵入领空算第一击 台湾重大宣示](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839873.md)
+#### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837527.md)
 #### [ CIA局长：习已下令军方2027年前准备武力犯台](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659631.md)
 #### [ 习近平为何在2021年出现了破颧纹？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018335.md)
-#### [ 政治敏感时刻 习“六四”后文章曝光 全面左转与此有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660132.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 20大前 习近平用反腐清理对手和提拔官员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840195.md)
