同步于: 10月7日20时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -39,8 +39,8 @@
 #### [ 政治敏感时刻 习“六四”后文章曝光 全面左转与此有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660132.md)
 #### [ 专家：习近平连任暗藏细节 高层内部存严重分歧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545586.md)
 #### [ 【秦鹏直播】揭密：李文亮最后时刻如何度过](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840230.md)
-#### [ 听者胆颤心惊 毛泽东究竟留下了哪些临终遗言？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018072.md)
 #### [ 20大前 习近平用反腐清理对手和提拔官员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840195.md)
+#### [ 听者胆颤心惊 毛泽东究竟留下了哪些临终遗言？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018072.md)
 #### [ 中共欲在港搞国际新秩序 分析：三字解决](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659880.md)
 #### [ 传上海有高校学生抗议封控“围警车” 学校即刻宣布解封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018463.md)
 #### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839313.md)
@@ -50,4 +50,4 @@
 #### [ 上海核酸亭变疫区 居民接通知“十年不准出门”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545385.md)
 #### [ 将选举数据存于中国服务器 美华裔CEO被捕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839611.md)
 #### [ 胡锡进就马斯克推文进行威胁 遭网友嘲讽奚落](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840172.md)
-#### [ 英媒详析中国经济陷入困境的五个原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659910.md)
+#### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837527.md)
