同步于: 10月8日0时2分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -1,53 +1,53 @@
 #### [法轮功真相](https://github.com/gfw-breaker/truth/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧二十周年报告](https://github.com/gfw-breaker/mh-reports/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp;[明慧期刊](https://github.com/gfw-breaker/mh-qikan) &nbsp;&nbsp;|&nbsp;&nbsp; [明慧海外之窗](https://github.com/gfw-breaker/mh-news/blob/master/README.md?t=0) &nbsp;&nbsp;|&nbsp;&nbsp; [神韵特别报道](https://github.com/gfw-breaker/mh-news/blob/master/shenyun.md?t=0)
-#### [ 习近平迈向第三任期 谁将接班李克强？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018374.md)
-#### [ 二十大前闭门内斗？政治局会议秘而不宣(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018327.md)
-#### [ 美智库：习近平如何在二十大巩固权力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018451.md)
-#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 习近平陷入独裁者的宿命 六大指标定输赢(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018499.md)
-#### [ 二十大习家军铺满政治局 福建帮或成大赢家(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018323.md)
+#### [ 美智库：习近平如何在二十大巩固权力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018451.md)
+#### [ 习近平迈向第三任期 谁将接班李克强？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018374.md)
+#### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
+#### [ 二十大前闭门内斗？政治局会议秘而不宣(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018327.md)
 #### [ 二十大添变数 美国将在关键时刻推“最强禁令”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018460.md)
-#### [ 习近平不只三连任？分析：习执政对美国非坏事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018380.md)
 #### [ 习二十大前痛下狠手 孙力军案背后还有隐情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018534.md)
-#### [ 云南女局长搞权色交易被开除公职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018272.md)
-#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 专家：七中全会“三明一暗”习最大对手是谁](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840326.md)
-#### [ 美国记者曝习近平30年前旧文 引发关注](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839654.md)
-#### [ 二十大中纪委书记换狠角？纪检高层人事密集调整(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018264.md)
-#### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
-#### [ 章天亮: 劝退习与李接任军委副主席 都是障眼法 真盘算是这⋯⋯](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659784.md)
+#### [ 二十大习家军铺满政治局 福建帮或成大赢家(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018323.md)
 #### [ 二十大谁上谁下 六大指标衡量习近平的输赢](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840381.md)
-#### [ 袁红冰谈官场内幕：中国等待一次重大事变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840196.md)
-#### [ 习近平昔日密友称其亟欲追求权力(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018243.md)
-#### [ 二十大：谁有可能跻身新一届常委(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018159.md)
-#### [ 李文亮死亡前的病历首曝光&nbsp;&nbsp;(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018436.md)
-#### [ 中共20大逼近 中国多省无预警“封城”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018367.md)
+#### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
+#### [ 习近平不只三连任？分析：习执政对美国非坏事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018380.md)
+#### [ 因玄奘寺丑闻被免职的女局长 换官衔露面(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018341.md)
 #### [ 二十大人事尘埃落定 这一群人料成大赢家](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660018.md)
-#### [ 这一危机远超“清零”影响？李嘉诚赶紧跑路](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659883.md)
-#### [ 云南大白持枪吓坏百姓 反习派发亡党警告](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659745.md)
 #### [ 【远见快评】俄军投降视频曝红 曝作战重大变化](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840399.md)
-#### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839313.md)
-#### [ 二十大来临 英媒爆中国经济陷入五大困境 李克强无能为力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659862.md)
+#### [ 袁红冰谈官场内幕：中国等待一次重大事变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840196.md)
 #### [ 专家：习近平连任暗藏细节 高层内部存严重分歧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545586.md)
 #### [ 武汉病毒学专家吴建国猝死引猜测(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018505.md)
-#### [ 港媒曝二十大修改党章细节 习近平追求长期执政](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659829.md)
-#### [ 北京二十大登场前 爆新疆航班几乎全被取消 公安高度监控(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018457.md)
-#### [ 蓬佩奥：共产党最害怕中国人听到真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839844.md)
 #### [ 政治敏感时刻 习“六四”后文章曝光 全面左转与此有关？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660132.md)
-#### [ 传北方民族大学收学生护照及港澳台通行证 恐出国不归(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018379.md)
 #### [ “终身领袖”入党章 司马昭之心？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660285.md)
 #### [ 20大前 习近平用反腐清理对手和提拔官员](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840195.md)
-#### [ 二十大后举什么旗？外界观察习近平左转](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545008.md)
-#### [ 施压蓬佩奥的公函曝光 中共虚假宣传被戳穿](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839614.md)
-#### [ 【热门话题】二十大后举什么旗？/分析中共新一届人事方案](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545082.md)
-#### [ 二十大前网络监控升级 民众聊天群组被封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840014.md)
+#### [ 云南女局长搞权色交易被开除公职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018272.md)
 #### [ 【秦鹏直播】揭密：李文亮最后时刻如何度过](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840230.md)
-#### [ 专家：中共经济模式自挖陷阱 难阻经济放缓](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839667.md)
-#### [ 施压蓬佩奥的公函曝光 中共虚假宣传被戳穿](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839614.md)
-#### [ 分析：将中共侵入领空算第一击 台湾重大宣示](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839873.md)
-#### [ 传上海有高校学生抗议封控“围警车” 学校即刻宣布解封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018463.md)
 #### [ 外媒曝李文亮鲜为人知的最后时刻](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840198.md)
 #### [ 国际安全分析师评C919客机：失败的“中国制造”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660180.md)
-#### [ 听者胆颤心惊 毛泽东究竟留下了哪些临终遗言？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p6/1018072.md)
-#### [ 【一线采访】西双版纳封城 警持枪与旅客对峙](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839313.md)
-#### [ 中共欲在港搞国际新秩序 分析：三字解决](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/659880.md)
+#### [ 二十大中纪委书记换狠角？纪检高层人事密集调整(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018264.md)
+#### [ 传上海有高校学生抗议封控“围警车” 学校即刻宣布解封(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018463.md)
 #### [ 上海核酸亭变疫区 居民接通知“十年不准出门”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545385.md)
+#### [ 大批金融高官落马 专家：习近平加紧清洗江派](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839933.md)
+#### [ 分析：习近平二十大前出手 孙力军案另有隐情](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545869.md)
+#### [ 大陆病毒权威专家吴建国猝死](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545876.md)
+#### [ 司马南叫嚣对亲乌人士“格杀勿论” 舆论炮轰](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545188.md)
+#### [ 黄晓明深夜晒家乡美食 半小时后急就医打点滴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840336.md)
+#### [ 战场急缺人？甘肃放大招 毕业生入伍奖金最高1万(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018479.md)
+#### [ 胡锡进就马斯克推文进行威胁 遭网友嘲讽奚落](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840172.md)
+#### [ 分析：将中共侵入领空算第一击 台湾重大宣示](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13839873.md)
+#### [ 习权力晴雨表 解码二十大新常委五种可能](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13837527.md)
+#### [ 李文亮死亡前的病历首曝光&nbsp;&nbsp;(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018436.md)
+#### [ 中国三大危机出现 学者：就等待一场重大事变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660243.md)
+#### [ 章天亮: 修改党章 透露习近平终身连任野心](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660090.md)
+#### [ 十一黄金周消费暴跌 中国经济再度承压](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840753.md)
+#### [ 北京二十大登场前 爆新疆航班几乎全被取消 公安高度监控(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018457.md)
+#### [ 紧盯二十大 国际投资者推测清零何时结束](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840862.md)
+#### [ 极端防疫 老百姓怨声载道 退出中共组织](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13840058.md)
+#### [ 二十大前北京只出不进？北京健康宝无差别弹窗引众怒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660117.md)
+#### [ 首超美元 人民币成俄最大外汇货币 专家担忧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc418/n13840299.md)
+#### [ 中交集团债务飙升 一带一路问题贷款暴增3倍](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13840169.md)
+#### [ 中国无人机挂载“机器狗”影片曝光 民叹“大监狱”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018467.md)
+#### [ 中共官媒发旧文聚焦“斗争” 逾30高官被查](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839927.md)
+#### [ 二十大人事尘埃落定 这一群人料成大赢家](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh186/660018.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 拜登警告：60年来世界首次面临核冲突风险](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13840558.md)
