同步于: 10月8日22时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -44,10 +44,10 @@
 #### [ 十一黄金周消费暴跌 中国经济再度承压](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840753.md)
 #### [ 中国三大危机出现 学者：就等待一场重大事变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660243.md)
 #### [ 云南女局长搞权色交易被开除公职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018272.md)
+#### [ 天安门“无节日气氛”没人 “所有晃的人全都是警察”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018612.md)
 #### [ 十一黄金周消费暴跌 中国经济再度承压](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13840753.md)
 #### [ 国际安全分析师评C919客机：失败的“中国制造”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660180.md)
 #### [ 二十大中纪委书记换狠角？纪检高层人事密集调整(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018264.md)
 #### [ 大批金融高官落马 专家：习近平加紧清洗江派](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13839933.md)
 #### [ 二十大前最重要会议：重点“三明一暗”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660372.md)
 #### [ 马斯克透露中共不满他送星链服务到乌克兰](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841104.md)
-#### [ 大陆病毒权威专家吴建国猝死](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103545876.md)
