--- a/pages/nsc413/n13841091.md
+++ b/pages/nsc413/n13841091.md
@@ -10,9 +10,20 @@
  二十大即将到来，中共元老干政的问题再次引发媒体关注。（示意图 GREG BAKER/AFP/Getty Images）
 </div></div><hr/>
 
-#### [ 🎬  免翻墙浏览墙外禁闻、观看YouTube热门视频及电视直播](https://github.com/gfw-breaker/HelloWorld)
 
-#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
+#### [ 🎬  《超越恐惧：高智晟律師的故事》](http://95.179.228.154:10000/videos/res1/709/?378838)
+
+#### [ 🎬 《红墙的记忆》— 中南海万人和平上访纪实](http://95.179.228.154:10000/videos/res2/legend/?378838)
+
+#### [ 🎬 《伪火》- 天安门自焚真相](http://95.179.228.154:10000/videos/blog/?378838)&nbsp; | &nbsp;[《六月黑夜》- 六四天安门大屠杀](http://95.179.228.154:10000/videos/88/?378838)
+
+#### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理 ...）](http://95.179.228.154:81/youtube.html?378838)
+
+#### [ 🔥  毛泽东私人医生李志绥曝光毛主席淫乱](http://95.179.228.154:10000/videos/res/Communist/?378838)
+
+#### [ 🔥  2014年辛灝年纪念《九评共产党》十周年演讲](http://95.179.228.154:10000/videos/res/jiuping/?378838)
+
+
 
 <div><p>
  【大纪元2022年10月08日讯】（大纪元记者张婷综合报导）随着中共新领导班子即将在二十大上亮相，元老干政问题近日再次引发外媒关注。
